tests/NormalTests/paczka1/fuzzy1/21300491.err
Error in line 2: S723 S929 10,5
Error in line 7: G3pm6pml S163 -1,9
Error in line 8: S723 S791 01,3
Error in line 6: G3pm6pml S163 7,4
Error in line 9: 5V9A99HUZI2 S723 73,7
Error in line 1: HTp4lrJF S791 22,4
Error in line 5: S723 S791 6,6
Error in line 10: G3pm6pml S929 77,9
Error in line 24: KVz1rTul7b S791 30,8
Error in line 16: HTp4lrJF S791 23,6
Error in line 32: HTp4lrJF S929 14,2
